src/test/run-pass/fn-bare-anon-2.rs
fn main() {
    let f: fn() = fn () {
        #debug("This is a bare function")
    };
    let g;
    g = f;
}